[tool.poetry]
name = "playwright-issue-content-type"
version = "0.1.0"
description = ""
authors = ["James Russo <jr@halo3.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.41.2"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
